--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -11,7 +11,7 @@
   transform: translate(20px,0);
   color: #FFF9C5
 }
-.home-container{
+.container{
   margin-top: 88px;
 }
 .row{
@@ -80,4 +80,40 @@
 }
 .row.row-exercise:hover{
   background-color: black;
+}
+
+.container.single-exercise{
+  width: 93%;
+}
+.row.row-exercise-single{
+  border: solid 5px black;
+  border-radius: 33px;
+  position: relative;
+}
+.description{
+  font-size: 18px;
+  margin: 2rem 3rem;
+}
+.link{
+  color: #008BF5;
+  transition: all 0.3s ease-out;
+  font-size: 18px;
+  text-align: center;
+  width: 60%;
+}
+.link:hover{
+  color: #47C26A;
+}
+.fas{
+  font-size: 40px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.star-icon{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+.star-icon:hover{
+  color: #FFEE59;
 }
