added modal and changed favicon

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -159,3 +159,13 @@
 .num{
   margin-top: 0.5rem;
 }
+.modal-content{
+  background-color: #FFF9C5;
+  border: solid black 4px;
+  border-radius: 13px;
+  padding: 1.5rem;
+}
+.modal-header{
+  border: none;
+  margin: auto;
+}
