--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -181,8 +181,7 @@
   height: 3.5rem;
 }
 .favorites-exercise-row{
-  width: 90%;
-  margin: auto;
+  margin: 2.2rem;
   transition: all 0.3s ease-out;
 }
 .fas.fa-trash{
