--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -246,6 +246,7 @@
   outline: none;
   border-radius: 13px;
   border: none;
+  transition: all 0.3s ease-out;
 }
 .text-input, .select{
   height: 2.5rem;
@@ -258,4 +259,7 @@
   margin: auto;
   background-color: white;
   margin-bottom: 2rem;
+}
+.text-input:focus, .select:focus, .textarea:focus{
+  box-shadow: 0px 4px 5px 1px rgba(0,0,0,0.3);;
 }
