--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -26,7 +26,9 @@
   .type-button.submit{
     width: 104%;
   }
-
+  .favs-add-header{
+    text-align: center;
+  }
 }
 
 @media screen and (max-width:991px){
