--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -301,3 +301,9 @@
 .fas.fa-check:hover{
   color: #47C26A;
 }
+.fas.fa-hand-point-left.validate-modal:hover{
+  color: #EF233C;
+}
+.fas.fa-thumbs-up.validate-modal:hover{
+  color: #47C26A;
+}
