--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -29,6 +29,18 @@
   .favs-add-header{
     text-align: center;
   }
+  .icons-div{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .fas.fa-pen{
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+  .fas.fa-trash{
+    margin-top: 1rem;
+  }
 }
 
 @media screen and (max-width:991px){
