--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -14,6 +14,12 @@
   transform: translate(20px,0);
   color: #FFF9C5
 }
+.fas.fa-sign-out-alt{
+  color: white;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+}
 
 /*home page*/
 .container{
