--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -48,6 +48,9 @@
     width: initial;
     margin: 0 1rem !important;
   }
+  .header-packed{
+    margin: 1rem;
+  }
 }
 
 @media screen and (max-width:991px){
