--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -5,11 +5,7 @@
 /*nav*/
 .nav-button{
   outline: none !important;
-  transform: scale(1.1);
-  transition: all 0.3s ease-out;
-}
-.nav-button:hover{
-  transform: scale(1);
+  padding: 0.25rem 0.5rem;
 }
 .nav-links{
   transition: all 0.3s ease-out;
@@ -18,12 +14,21 @@
   transform: translate(20px,0);
   color: #FFF9C5
 }
+.icofont-navigation-menu{
+  font-size: 30px;
+  transition: all 0.3s ease-out;
+}
+.icofont-navigation-menu:hover{
+  color: white;
+}
 .fas.fa-sign-out-alt{
   color: white;
   position: fixed;
   top: 0.5rem;
   right: 1rem;
   transition: all 0.15s ease-out;
+  font-size: 33px;
+  margin-top: 0.25rem;
 }
 .fas.fa-sign-out-alt:hover{
   transform: translate(3px);
