--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -49,7 +49,7 @@
     margin: 0 1rem !important;
   }
   .header-packed{
-    margin: 1rem;
+    margin: 2rem 1rem;
   }
   .quote{
     padding: 3rem 2rem;
