--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -54,6 +54,9 @@
   .quote{
     padding: 3rem 2rem;
   }
+  .accordion{
+    margin: 2rem 1rem 4rem;
+  }
 }
 
 @media screen and (max-width:991px){
