--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -3,6 +3,11 @@
 }
 
 /*nav*/
+.overlay{
+  position: fixed;
+  inset: 0;
+  z-index: 1030;
+}
 .nav-button{
   outline: none !important;
   padding: 0.25rem 0.5rem;
