nav logo update

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -48,9 +48,8 @@
 .icofont-muscle{
   position: absolute;
   right: 1rem;
-  top: 2.5rem;
-  color: #FFDBAC;
-  font-size: 33px;
+  top: 2.2rem;
+  width: 4rem;
 }
 
 /*home page*/
